
syntax = "proto3";
package cacti.satp.v02;

import "cacti/satp/v02/common/common_messages.proto";

message LockAssertionClaim {

}

message LockAssertionFormat {

}

message LockAssertionRequestMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
  LockAssertionClaim lock_assertion_claim = 2;
  LockAssertionFormat lock_assertion_format = 3;
  string lock_assertion_expiration = 4;
  string client_transfer_number = 5;
  string client_signature = 6;
}

message LockAssertionReceiptMessage {
  cacti.satp.v02.common.CommonSatp common = 1;
  string server_transfer_number = 2;
  string server_signature = 3;
}
  
service SatpStage2Service {
  rpc LockAssertion(LockAssertionRequestMessage) returns (LockAssertionReceiptMessage) {}
}
